infra/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: order
  labels:
    app: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: order-service
    spec:
      containers:
      - image: order:v2
        name: order
        ports:
          - containerPort: 8080
        resources:
          requests:
            cpu: 1000m
            memory: 512Mi
          limits:
            cpu: 1000m
            memory: 1024Mi
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
          successThreshold: 1
