infra/localstack.yaml
apiVersion: v1
kind: Pod
metadata:
  name: localstack
  namespace: order
  labels:
    app: localstack
spec:
  containers:
    - name: localstack
      image: localstack/localstack:latest
      ports:
        - containerPort: 4566
        - containerPort: 4571
      volumeMounts:
        - name: localstack-data
          mountPath: /var/lib/localstack
    - name: aws-cli
      image: amazon/aws-cli:2.13.12
      command: ["/bin/sh", "-c"]
      args:
        - |
          aws --endpoint-url=http://localhost:4566 sqs create-queue \
          --queue-name orders.fifo \
          --attributes FifoQueue=true,ContentBasedDeduplication=true && \
          tail -f /dev/null
  volumes:
    - name: localstack-data
      hostPath:
        path: localstack
  restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: localstack-service
  namespace: order
  labels:
    app: localstack-service
spec:
  ports:
    - name: tcp-4566
      port: 4566
      protocol: TCP
      targetPort: 4566
    - name: tcp-4571
      port: 4571
      protocol: TCP
      targetPort: 4571
  selector:
    app: localstack
  type: ClusterIP
