infra/postgres.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: postgresdb
  name: postgresdb
  namespace: order
spec:
  containers:
  - env:
    - name: POSTGRES_USER
      value: postgres
    - name: POSTGRES_PASSWORD
      value: postgres066252
    - name: POSTGRES_DB
      value: orders
    image: postgres:16
    name: postgresdb
    ports:
    - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: order
  labels:
    app: postgres-service
spec:
  ports:
    - name: tcp
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: postgresdb
  type: ClusterIP
