infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: order-service
  name: order-service
  namespace: order
spec:
  ports:
  - name: app
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: order-service
  type: NodePort
